   automatically (enhances existing wrapper scripts). Old behavior can be
   found by calling _parse_XML()
 - a file can now be based on a filelist passed as input parameter. In this
   case the first file in the filelist is used as the source for the based_on
   file
 - Enhanced recovery for Torque connection errors (unable to open socket errors)
 - added --write-file-summary option to civet_run


Version 1.8.4.3
---------------
Bug Fixes
 - allow () to be used as tool command file delimiters


Version 1.8.4.2
---------------
Bug Fixes
 - revert change that prevented validity.py from working with Python 2.7


Version 1.8.4.1
---------------
Bug Fixes
 - input="true" now implies create="false" for <dir> tag


Version 1.8.4
-------------
Bug Fixes
 - fix AttributeError when referencing undefined file within a tool XML
 - allow use of "PIPELINE_ROOT" within tool XML
 - raise a ParseError if a File ID is defined more than once


Version 1.8.3
-------------
Bug Fixes
 - fix bug introduced in 1.8.2 that prevented the epilogue from running
   correctly for the merged remove temp/consolidate logs step


Version 1.8.2
-------------
Bug Fixes
 - <string> tags can now be used in tool xml files
 - epilogue path is set correctly if log_dir and execution_log_dir differ

Features
 - wall_time_ranges_list_long_jobs.py utility now lets user specify the
   minimum walltime to use to classify a job as 'long running'
 - remove temp and consolidate log jobs merged


Version 1.8.1
-------------
Bug fixes
 - Don't strip off relative paths when applying in_dir
 - Allow 'pattern/replace' to be combined with 'append', 'datestamp_append',
   and 'datestamp_prepend' for the <file>, <dir>, and <string> tags.
 - civet_cancel -r was terminating if it found a complete pipeline rather than
   continuing on to process the next pipeline directory
 - <dir> files can now be declared temp in a tool XML

Features
 - New implicitly defined directory ID "PIPELINE_ROOT", contains the path to the