@@ -20,6 +20,7 @@ Features
    file
  - Enhanced recovery for Torque connection errors (unable to open socket errors)
  - added --write-file-summary option to civet_run
+ - added --json options to civet_run and civet_status
 
 
 Version 1.8.4.3
